[package]
name = "tracerr"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Custom compile-time captured error tracing."
authors = ["Kai Ren <tyranron@gmail.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/tracerr"
homepage = "https://github.com/tyranron/tracerr-rs"
repository = "https://github.com/tyranron/tracerr-rs"
readme = "README.md"
keywords = ["backtrace", "error", "stacktrace", "tracing", "tracerr"]
categories = ["rust-patterns"]
include = ["/src/", "/CHANGELOG.md", "/LICENSE.md", "/README.md"]

[dependencies]
derive_more = { version = "2.0", features = ["as_ref", "display"] }
sealed = "0.6"
